# Project-Aurenex

./: .gitignore  ManusAIPromptforNeonoteV03.txt  README.md  copy_qwen2_vl_model.bat  cross_platform_ffi_guide.md  extract_and_optimize_ollama_model.bat  extract_and_optimize_ollama_model.py  improved_download_model.bat  neonote_ai_integration_guide.md  project_structure.md  pubspec.yaml  requirements_analysis.md
.github/workflows/: ci.yml
android/app/: build.gradle.kts
docs/: neonote_windows_integration_guide.md  project_structure.md
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: config.dart  main.dart
lib/ai/: llm_interface.dart
lib/customization/: theme_manager.dart
lib/design/: apple_design.dart
lib/ffi/: llama_bindings.dart  llama_ffi.dart
lib/graph/: graph_view.dart
lib/md/: markdown_parser.dart
lib/models/: api_key.dart  block.dart  page.dart  user_settings.dart  workspace.dart
lib/platform/: file_picker_windows.dart  windows_config.dart
lib/screens/: ai_assistant_screen.dart  ai_chat_screen.dart  dashboard_screen.dart  graph_view_screen.dart  home_screen.dart  page_editor_screen.dart  settings_screen.dart
lib/services/: ai_service.dart  storage_service.dart  theme_service.dart
lib/storage/: database_manager.dart  repository.dart
lib/sync/: external_api.dart
lib/ui/: ai_chat_screen.dart
lib/utils/: api_compatibility.dart  file_picker_helper.dart
lib/widgets/: block_renderer.dart  mermaid_renderer.dart  search_bar.dart
linux/: CMakeLists.txt
linux/runner/: my_application.cc
llama_cpp_wrapper/: CMakeLists.txt  llama_wrapper.cpp  llama_wrapper.h
macos/Runner.xcodeproj/: project.pbxproj
scripts/: README.md  convert_model.bat  copy_latest_llama_wrapper.bat  migrate_blocks_timestamps_all.bat
test/: ai_service_test.dart  home_screen_test.dart  models_test.dart  storage_service_test.dart  widget_test.dart  workspace_test.dart
web/: index.html  manifest.json
(+46 files in other folders)
